# dpibreak

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASE_NOTE.md  WINDOWS_GUIDE.txt  build.ps1  build.rs  dpibreak.1  dpibreak.1.in  dpibreak.1.md  dpibreak.md  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
.hooks/: pre-commit
benches/: hoptab_bench.rs
crates/windivert/: Cargo.toml
crates/windivert/src/divert/: mod.rs
pkg/: README.md
res/windows_bats/: service_install.bat  service_remove.bat  start_fake.bat
scripts/: add-header.sh  package-release.sh  test-url
src/: log.rs  main.rs  opt.rs  pkt.rs  platform.rs  tls.rs
src/pkt/: fake.rs  hoptab.rs
src/platform/: linux.rs  windows.rs
src/platform/linux/: iptables.rs  libc_s.rs  nftables.rs  rules.rs  rxring.rs
src/platform/linux/rules/: iptables.rs
