# Copyright 2025 Dillution <https://github.com/dilluti0n>.
#
# This file is part of DPIBreak.
#
# DPIBreak is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation, either version 3 of the License, or (at your
# option) any later version.
#
# DPIBreak is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License
# for more details.
#
# You should have received a copy of the GNU General Public License
# along with DPIBreak. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "dpibreak"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ctrlc = { version = "3.4", features = ["termination"] }
anyhow = "1"
etherparse = "0.18"

[target.'cfg(target_os = "linux")'.dependencies]
iptables = "0.4"
nfq = { git = "https://github.com/nbdd0121/nfq-rs.git", rev = "4efbaa3" } # to use as_raw_fd
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.27.1", features = ["fs", "poll"] }

[target.'cfg(windows)'.dependencies]
windivert = { version = "0.6.0" }

[build-dependencies]
winres = "0.1"
